--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <footer>
     <div class="footer">
       <a href="pesan.html">
-       <li>lanjut sini sayang</li>
+       <li>cek</li>
       </a>
     </div>
     </footer>
